<resources>
    <string name="app_name">Igor Chernishenko\'s App</string>

    <string name="title_login">Login</string>
    <string name="hint_login">Enter email here</string>

    <string name="title_password">Password</string>
    <string name="hint_password">Enter password here</string>

    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>

    <string name="butterknife_screen">ButterKnife Activity screen</string>
    <string name="check_me_please">Check me please.</string>
    <string name="no_check_me">No, check me please!</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="recycler_view_example">RecyclerView Example Activity</string>
</resources>
