<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    >

    <TextView
        android:id="@+id/tv_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_form_holder"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/default_text"
        android:textSize="@dimen/title_text"
        />

    <LinearLayout
        android:id="@+id/ll_form_holder"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_login"
            android:textColor="@color/default_text"
            android:textSize="@dimen/field_title"
            />

        <EditText
            android:id="@+id/et_login"
            android:layout_width="@dimen/input_width"
            android:layout_height="wrap_content"
            android:hint="@string/hint_login"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColor="@color/default_text"
            tools:ignore="Autofill"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/title_password"
            android:textColor="@color/default_text"
            android:textSize="@dimen/field_title"
            />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="@dimen/input_width"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/default_text"
            tools:ignore="Autofill"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/ll_form_holder"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/btn_sign_in"
            style="@style/DefaultButton"
            android:text="@string/sign_in"
            />

        <Button
            android:id="@+id/btn_forgot_password"
            style="@style/TextButton"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="0dp"
            android:text="@string/forgot_password"
            />

    </LinearLayout>
</RelativeLayout>
