<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:ignore="RtlSymmetry"
    >

    <CheckBox
        android:id="@+id/cb_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:checked="true"
        android:text="@string/check_me_please"
        android:textSize="16sp"
        />

    <CheckBox
        android:id="@+id/cb_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:text="@string/no_check_me"
        android:textSize="16sp"
        />

    <RadioGroup
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >

        <RadioButton
            android:id="@+id/rb_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:paddingStart="4dp"
            android:text="@string/option_1"
            />

        <RadioButton
            android:id="@+id/rb_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:paddingStart="4dp"
            android:text="@string/option_2"
            />

        <RadioButton
            android:id="@+id/rb_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:text="@string/option_3"
            />

    </RadioGroup>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        tools:listitem="@layout/row_spinner_selected"
        />

</LinearLayout>